# vision-fsm-agent

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt  run.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yml  test.yml
assets/demo/: README.md
configs/: config.yaml
demo_app/: __init__.py  visual_grid_world.py
docs/: README.md  architecture.md  demo.md  hil-workflow.md  safety-boundaries.md  troubleshooting.md
docs/agent_ledger/: CODEX_OSS_APPLICATION.md  NEXT.md  PROGRESS.md  RELEASE_PLAN.md
docs/api/: README.md  agent.md  fsm.md  hil.md  vision.md
docs/maintainer/: CODEX_OSS_APPLICATION.md  PROJECT_SUMMARY.md  RELEASE_PLAN.md
docs/maintainer/agent_ledger/: DECISIONS.md  ERRORS.md  NEXT.md  PROGRESS.md  README.md  SESSION_START.md
docs/releases/: v0.1.0.md
examples/: README.md  custom_fsm.py
examples/custom_fsm/: custom_fsm.py
examples/visual_grid_world/: README.md  config.yaml  run_demo.py
examples/visual_grid_world/assets/: README.md
scripts/: generate_demo_assets.py  oss_readiness_check.py
src/: __init__.py  agent.py  fsm.py  hil_client.py  hil_server.py  main.py  mcp_server.py  vision.py
src/vision_fsm_agent/: __init__.py  agent.py  cli.py  config.py  fsm.py  main.py  vision.py
src/vision_fsm_agent/actions/: __init__.py
src/vision_fsm_agent/decision/: __init__.py
src/vision_fsm_agent/envs/: __init__.py  grid_world.py
src/vision_fsm_agent/hil/: __init__.py  client.py  server.py
src/vision_fsm_agent/utils/: __init__.py
tests/: conftest.py  test_agent.py  test_config.py  test_demo.py  test_fsm.py  test_hil.py  test_mcp.py  test_vision.py
tests/integration/: test_demo.py  test_hil.py
tests/smoke/: test_custom_fsm.py  test_demo_run.py  test_examples_independent.py
tests/unit/: test_agent.py  test_config.py  test_fsm.py  test_vision.py
